--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
-<html>
-<body>
-<body bgcolor="yellow">
-<p>
-Perhatikan bahwa halaman ini seharusnya berwarna kuning.
+<!-- Foto Profil -->
+<p align="center">
+  <img src="https://raw.githubusercontent.com/USERNAME/USERNAME/main/profile.jpg" 
+       alt="Foto Profil" width="200" style="border-radius: 50%;">
 </p>
-<h1>Ini adalah heading 1</h1>
-<h2>Ini adalah heading 2</h2>
-<h3>Ini adalah heading 3</h3>
-<h4>Ini adalah heading 4</h4>
-<h5>Ini adalah heading 5</h5>
-<h6>Ini adalah heading 6</h6>
-<p>Gunakan tag heading hanya untuk membuat heading saja. Jangan menggunakan tag tersebut hanya untuk membuat tampilan huruf tebal. Gunakan tag lain untuk keperluan itu. </p>
-<h1 align="center">Ini adalah heading 1</h1>
-<p>Heading di atas telah diposisikan untuk berada di tengah halaman ini. </p>
-</body>
-</html>
 
+<h1 align="center">Hi 👋, Saya USERNAME</h1>
+<h3 align="center">✨ Backend / Frontend Developer ✨</h3>
+
+---
+
+## 🔥 Tentang Saya
+- 🌱 Sedang belajar **JavaScript, Node.js, React**
+- 👨‍💻 Portfolio: https://USERNAME.github.io/
+- 📫 Kontak: **youremail@example.com**
+- ⚡ Fun fact: Saya suka ngoding sambil ngopi ☕  
+
+---
+
+## 🚀 Teknologi yang Saya Gunakan
+<p>
+  <img src="https://skillicons.dev/icons?i=js,ts,nodejs,react,html,css,git,github" />
+</p>
+
+---
+
+## 📊 GitHub Stats
+<p align="center">
+  <img src="https://github-readme-stats.vercel.app/api?username=USERNAME&show_icons=true&theme=tokyonight" alt="stats" />
+</p>
+
+<p align="center">
+  <img src="https://github-readme-streak-stats.herokuapp.com/?user=USERNAME&theme=tokyonight" />
+</p>
+
+---
+
+## 🖼️ Foto Profil (Letakkan File)
+Kamu cukup upload file gambar (misal: `profile.jpg`) di repository ini.  
+Lalu Markdown-nya otomatis memakai foto tersebut.
+
+---
+
+## 🌐 Sosial Media
+- Instagram: https://instagram.com/USERNAME  
+- LinkedIn : https://linkedin.com/in/USERNAME  
