--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Saya - USERNAME</title>
+    <title>Profil Saya - FATIME</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         /* CSS Dasar */
@@ -11,7 +11,7 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #1a1a2e; /* Warna latar belakang gelap */
+            background-color: #FF69B4 /* pink */
             color: #e4e4f0; /* Warna teks terang */
             line-height: 1.6;
         }
