--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <div class="container">
     
     <header class="profile-header">
-        <img src="./profile.jpg" alt="Foto Profil" class="profile-img">
+        <img src="./profile.png" alt="Foto Profil" class="profile-img">
         <h1>Halo 👋, Saya fatimah Nur Aisyah </h1>
         <h3>✨ Backend / Frontend Developer | Fullstack Enthusiast ✨</h3>
     </header>
