--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="section">
         <h2>🛠️ Teknologi Pilihan</h2>
         <div class="tech-icons">
-            <img src="https://skillicons.dev/icons?i=js" alt="JavaScript">
+            <a href="https://wa.me/NOMORANDA" target="_blank"></a>
             <img src="https://skillicons.dev/icons?i=ts" alt="TypeScript">
             <img src="https://skillicons.dev/icons?i=nodejs" alt="Node.js">
             <img src="https://skillicons.dev/icons?i=react" alt="React">
