--- a/index.html
+++ b/index.html
@@ -163,15 +163,17 @@
     <div class="section">
         <h2>🛠️ Teknologi Pilihan</h2>
         <div class="tech-icons">
-            <a href="https://wa.me/NOMORANDA" target="_blank"></a>
-            <img src="https://skillicons.dev/icons?i=ts" alt="TypeScript">
-            <img src="https://skillicons.dev/icons?i=nodejs" alt="Node.js">
-            <img src="https://skillicons.dev/icons?i=react" alt="React">
-            <img src="https://skillicons.dev/icons?i=html" alt="HTML5">
-            <img src="https://skillicons.dev/icons?i=css" alt="CSS3">
-            <img src="https://skillicons.dev/icons?i=tailwind" alt="Tailwind CSS">
-            <img src="https://skillicons.dev/icons?i=git" alt="Git">
-            <img src="https://skillicons.dev/icons?i=github" alt="GitHub">
+            <a href="https://wa.me/NOMORANDA" target="_blank" title="WhatsApp">
+        <img src="https://skillicons.dev/icons?i=whatsapp" alt="WhatsApp">
+    </a>
+    
+    <a href="https://instagram.com/USERNAME" target="_blank" title="Instagram">
+        <img src="https://skillicons.dev/icons?i=instagram" alt="Instagram">
+    </a>
+    
+    <a href="https://www.facebook.com/IDANDA" target="_blank" title="Facebook">
+        <img src="https://skillicons.dev/icons?i=facebook" alt="Facebook">
+    </a>
         </div>
     </div>
 
