--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <div class="flex flex-wrap justify-center gap-4 mt-6">
             
             <!-- Link Facebook -->
-            <a href="https://www.facebook.com/<GANTI_DENGAN_ID_FACEBOOK_ANDA>" target="_blank" class="social-icon-wrapper p-3 bg-blue-600 hover:bg-blue-700 rounded-full shadow-lg flex items-center">
+            <a href="https://www.facebook.com/fatimah.aisyah.id" target="_blank" class="social-icon-wrapper p-3 bg-blue-600 hover:bg-blue-700 rounded-full shadow-lg flex items-center">
                 <img src="https://skillicons.dev/icons?i=facebook" alt="Facebook" class="w-6 h-6">
             </a>
 
             <!-- Link WhatsApp (Wajib diganti dengan nomor Anda) -->
-            <a href="https://wa.me/62<GANTI_DENGAN_NOMOR_WA_ANDA>" target="_blank" class="social-icon-wrapper p-3 bg-green-500 hover:bg-green-600 rounded-full shadow-lg flex items-center">
+            <a href="https://wa.me/628123456789" target="_blank" class="social-icon-wrapper p-3 bg-green-500 hover:bg-green-600 rounded-full shadow-lg flex items-center">
                 <img src="https://skillicons.dev/icons?i=whatsapp" alt="WhatsApp" class="w-6 h-6">
             </a>
 
