--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="text-center">
             <!-- Ganti URL ini dengan foto profil Anda -->
             <img 
-                src="https://placehold.co/180x180/1f2937/ffffff?text=FATIME" 
+                src="profile.png" 
                 alt="Foto Profil Fatime" 
                 class="w-36 h-36 rounded-full mx-auto ring-4 ring-blue-500 mb-4 object-cover"
                 onerror="this.src='https://placehold.co/180x180/1f2937/ffffff?text=FATIME';"
@@ -45,12 +45,12 @@
             
             <!-- Link Facebook -->
             <a href="https://www.facebook.com/fatimah.aisyah.id" target="_blank" class="social-icon-wrapper p-3 bg-blue-600 hover:bg-blue-700 rounded-full shadow-lg flex items-center">
-                <img src="https://skillicons.dev/icons?i=facebook" alt="Facebook">
+                <img src="Facebook.png" alt="Facebook">
             </a>
 
             <!-- Link WhatsApp (Wajib diganti dengan nomor Anda) -->
             <a href="https://wa.me/628123456789" target="_blank" class="social-icon-wrapper p-3 bg-green-500 hover:bg-green-600 rounded-full shadow-lg flex items-center">
-                <img src="https://skillicons.dev/icons?i=whatsapp" alt="WhatsApp">
+                <img src="WhatsApp.png" alt="WhatsApp">
             </a>
 
             <!-- Link Instagram (Wajib diganti dengan username Anda) -->
