--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             
             <!-- Link Facebook -->
             <a href="https://www.facebook.com/fatimah.aisyah.id" target="_blank" class="social-icon-wrapper p-3 bg-blue-600 hover:bg-blue-700 rounded-full shadow-lg flex items-center">
-                <img src="Facebook.png" alt="Facebook">
+                <img src="Facebook.png" alt="Facebook"  class="w-6 h-6">
             </a>
 
             <!-- Link WhatsApp (Wajib diganti dengan nomor Anda) -->
             <a href="https://wa.me/628123456789" target="_blank" class="social-icon-wrapper p-3 bg-green-500 hover:bg-green-600 rounded-full shadow-lg flex items-center">
-                <img src="WhatsApp.png" alt="WhatsApp">
+                <img src="WhatsApp.png" alt="WhatsApp"  class="w-6 h-6">
             </a>
 
             <!-- Link Instagram (Wajib diganti dengan username Anda) -->
